# file-searcher

./: .gitignore  README.md
resources/: A1-SearchResult.TXT  A1-SearchResult2.TXT
src/file_searcher/: CMakeLists.txt  file_handler.cpp  file_handler.h  file_searcher.cpp  file_searcher.h  search_status.h
src/file_searcher/handlers/: file_handler.cpp  file_handler.h
src/file_searcher/models/: search_status.cpp  search_status.h
src/search-txt-file/: Program.cs  search-txt-file.csproj  search-txt-file.sln
src/search-txt-file/Handlers/: TxtFileSearcher.cs
src/search-txt-file/Models/: SearchOutput.cs  VariableValue.cs
